--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
         <section class="score-panel">
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star starRate"></i></li>
+        		<li><i class="fa fa-star starRate"></i></li>
+        		<li><i class="fa fa-star starRate"></i></li>
         	</ul>
 
         	<span class="moves">0</span> Moves
