--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="endPopup animated zoomIn">
             <h2>Awesome You Get It 🎉</h2>
             <h2 id="stars">⭐ ⭐ ⭐</h2>
-            <p>you took <span id="time"> 33 </span> min</p>
+            <p>you took <span id="time"> 33 </span> min and clicked <span id="movement">33</span> times</p>
             <button type="button" onclick="restart()" class="button">play again</button>
             <div class="breakLine"></div>
             <!-- List of players-->
